NetBSD Problem Report #18977

Received: (qmail 18877 invoked by uid 605); 8 Nov 2002 16:54:14 -0000
Message-Id: <1036773698.691530.761.nullmailer@yamt.dyndns.org>
Date: Sat, 09 Nov 2002 01:41:38 +0900
From: yamt@mwd.biglobe.ne.jp
Sender: gnats-bugs-owner@netbsd.org
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.netbsd.org
Subject: LFS panic "getblk: block size invariant failed"
X-Send-Pr-Version: 3.95

>Number:         18977
>Category:       kern
>Synopsis:       LFS panic "getblk: block size invariant failed"
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 08 16:55:09 +0000 2002
>Closed-Date:    Sun Nov 24 08:58:47 +0000 2002
>Last-Modified:  Sun Nov 24 08:58:47 +0000 2002
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 1.6K
>Organization:

>Environment:


System: NetBSD kaeru 1.6K NetBSD 1.6K (build.kaeru) #170: Sat Nov 9 00:41:22 JST 2002 takashi@kaeru:/usr/home/takashi/work/kernel/build.kaeru i386
Architecture: i386
Machine: i386
>Description:
	lfs abuses blksize() macro for indirect blocks and
	getblk with wrong sizes.
>How-To-Repeat:

>Fix:

Index: lfs_syscalls.c
===================================================================
RCS file: /cvs/NetBSD/syssrc/sys/ufs/lfs/lfs_syscalls.c,v
retrieving revision 1.71
diff -u -p -r1.71 lfs_syscalls.c
--- lfs_syscalls.c	2002/08/03 00:12:49	1.71
+++ lfs_syscalls.c	2002/11/08 16:37:24
@@ -455,7 +455,10 @@ lfs_markv(struct proc *p, fsid_t *fsidp,
 		 * disk, so they should have the same size as their on-disk
 		 * counterparts.
 		 */
-		obsize = blksize(fs, ip, blkp->bi_lbn);
+		if (blkp->bi_lbn >= 0)
+			obsize = blksize(fs, ip, blkp->bi_lbn);
+		else
+			obsize = fs->lfs_bsize;
 		/* Check for fragment size change */
 		if (blkp->bi_lbn >= 0 && blkp->bi_lbn < NDADDR) {
 			obsize = ip->i_lfs_fragsize[blkp->bi_lbn];
@@ -484,6 +487,9 @@ lfs_markv(struct proc *p, fsid_t *fsidp,
 			bp->b_blkno = fsbtodb(fs, blkp->bi_daddr);
 		} else {
 			/* Indirect block */
+			if (blkp->bi_size != fs->lfs_bsize)
+				panic("lfs_markv: partial indirect block?"
+				    " size=%d\n", blkp->bi_size);
 			bp = getblk(vp, blkp->bi_lbn, blkp->bi_size, 0, 0);
 			if (!(bp->b_flags & (B_DONE|B_DELWRI))) { /* B_CACHE */
 				/*
@@ -836,7 +842,10 @@ lfs_bmapv(struct proc *p, fsid_t *fsidp,
 			}
 			blkp->bi_daddr = dbtofsb(fs, blkp->bi_daddr);
 			/* Fill in the block size, too */
-			blkp->bi_size = blksize(fs, ip, blkp->bi_lbn);
+			if (blkp->bi_lbn >= 0)
+				blkp->bi_size = blksize(fs, ip, blkp->bi_lbn);
+			else
+				blkp->bi_size = fs->lfs_bsize;
 		}
 	}

>Release-Note:
>Audit-Trail:

From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/18977 CVS commit: syssrc/sys/ufs/lfs
Date: Sun, 24 Nov 2002 10:27:02 +0200 (EET)

 Module Name:	syssrc
 Committed By:	yamt
 Date:		Sun Nov 24 08:27:01 UTC 2002

 Modified Files:
 	syssrc/sys/ufs/lfs: lfs_syscalls.c

 Log Message:
 blksize() macro shouldn't used for indirect blocks.
 this fixes "getblk: block size invariant failed" panic.
 PR 18977.


 To generate a diff of this commit:
 cvs rdiff -r1.71 -r1.72 syssrc/sys/ufs/lfs/lfs_syscalls.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed 
State-Changed-By: yamt 
State-Changed-When: Sun Nov 24 00:58:10 PST 2002 
State-Changed-Why:  
fixed 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.