blksize() macro shouldn't used for indirect blocks. this fixes "getblk: block size invariant failed" panic. PR 18977.